--- a/index.html
+++ b/index.html
@@ -7,8 +7,33 @@
 </head>
 
 <body>
-
+    <a href="http://www.ign.com"> A link to a gaming website</a>
     <p>My favorite thing is gaming. It is fun and keeps me busy.</p>
+    <h1>What IGN is</h1>
+    <ol>
+        <li>Videos Games</li>
+        <li>Walkthroughs</li>
+        <li>Cheats</li>
+        <li>Reviews</li>
+        <li>Upcoming Games</li>
+    </ol>
+    <h1>IGN</h1>
+    <h2>Game Reviews.</h2>
+    <h2>Game Wikis.</h2>
+    <footer>
+        <h3>Contact Information</h3>
+        <ul>
+            <li>E-mail: Addison@Zirbes.com</li>
+        </ul>
+        <br></br>
+        &copy; 2016 Addison Zirbes.
+
+
+
+
+
+
+    </footer>
 </body>
 
 </html>
