Finished Fan Page Part 2

--- a/index.html
+++ b/index.html
@@ -4,29 +4,35 @@
 <head>
     <title>Gaming is great!</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" />
+
 </head>
 
 <body>
     <a href="http://www.ign.com"> A link to a gaming website</a>
-    <p>My favorite thing is gaming. It is fun and keeps me busy.</p>
-    <h1>What IGN is</h1>
-    <ol>
-        <li>Videos Games</li>
-        <li>Walkthroughs</li>
-        <li>Cheats</li>
-        <li>Reviews</li>
-        <li>Upcoming Games</li>
-    </ol>
-    <h1>IGN</h1>
-    <h2>Game Reviews.</h2>
-    <h2>Game Wikis.</h2>
+    <p>My <span style="color:#18DDE7;">favorite thing</span> is gaming. It is fun and keeps me busy.</p>
+
+    <main>
+        <h1>What IGN is</h1>
+        <ol>
+            <li>Videos Games</li>
+            <li>Walkthroughs</li>
+            <li>Cheats</li>
+            <li>Reviews</li>
+            <li>Upcoming Games</li>
+        </ol>
+        <h1>IGN</h1>
+        <div style="color:#0000FF">
+            <h2>Game Reviews.</h2></div>
+        <h2>Game Wikis.</h2>
+    </main>
+
     <footer>
         <h3>Contact Information</h3>
         <ul>
             <li>E-mail: Addison@Zirbes.com</li>
         </ul>
-        <br></br>
-        &copy; 2016 Addison Zirbes.
+        <br> &copy; 2016 Addison Zirbes.
 
 
 
