--- a/index.html
+++ b/index.html
@@ -11,9 +11,18 @@
 
 <body>
     <main>
+
+
         <a href="http://www.ign.com"> A link to a gaming website</a>
+
         <p>My <span style="color:#18DDE7;">favorite thing</span> is gaming. It is fun and keeps me busy.</p>
-        <div style="color:#0000FF"><h1>What IGN is</h1></div>
+
+        <div style="color:#0000FF">
+            <div class="header">
+                <div class="content">
+                    <h1>What IGN is</h1></div>
+            </div>
+        </div>
         <ul>
             <li>Videos Games</li>
             <li>Walkthroughs</li>
@@ -21,8 +30,11 @@
             <li>Gaming Reviews</li>
             <li>Upcoming Games</li>
         </ul>
+
+        <img src="gaming.jpg" alt="gaming" height="100" width="150">
+
         <h1>IGN</h1>
-            <h2>Game Reviews.</h2>
+        <h2>Game Reviews.</h2>
         <h3>Game Wikis.</h3>
     </main>
 
