updated fan page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+
+            <li>
+                <a href="index.html">Home Page</a>
+                <a href="#section1">Section1</a>
+                <a href="#section2">Section2</a>
+                <a href="#section3">Section3</a>
+                <a href="#section4">Section4</a>
+            </li>
+
+        </ul>
+    </nav>
     <main>
 
         <header>
@@ -24,8 +37,10 @@
                 <div class="header">
                     <div class="content">
                         <h1>What IGN is</h1></div>
+                    <p>A gaming web site that gamers use to find out news about gaming.</p>
                 </div>
             </div>
+
         </header>
         <ul>
             <li>Videos Games</li>
@@ -37,13 +52,24 @@
 
         <img src="gaming.jpg" alt="gaming" height="100" width="150">
 
-        <h1>IGN</h1>
-        <h2>Game Reviews.</h2>
-        <h3>Game Wikis.</h3>
+        <section id="section1">
+
+            <h1>IGN</h1>
+        </section>
+
+        <section id="section2">
+            <h2>Game Reviews.</h2>
+        </section>
+
+        <section id="section3">
+            <h3>Game Wikis.</h3>
+        </section>
     </main>
 
     <footer>
-        <h4>Contact Information</h4>
+        <section id="section4">
+            <h4>Contact Information</h4>
+        </section>
         <ul>
             <li>E-mail: Addison@Zirbes.com</li>
         </ul>
